# job-hunter-skills

./: Dockerfile  app.py  dados_vagas_linkedin.csv  deploy.sh  docker-compose.yml  pyproject.toml
