[project]
name = "job-hunter-skills"
version = "0.1.0"
description = "Job Hunter AI Streamlit App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "altair>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "selenium>=4.0.0", 
    "webdriver-manager>=4.0.0"
]

[tool.uv]
dev-dependencies = []
